# DroidLink

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  test.yml
android/: .gitignore  BUILDING.md  FILES_CREATED.md  ICONS_NOTE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  droidlink-companion.p12  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
docs/: VERSION_SCHEME.md  architecture.md  product.md  usage.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adb/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/filemanager/: mod.rs
src-tauri/src/scrcpy/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/version/: mod.rs
src/__mocks__/: tauri-api.ts  tauri-plugin.ts
src/__tests__/: setup.ts
src/components/: CompanionInstallPrompt.tsx  ErrorBoundary.tsx  Sidebar.tsx  StatusBar.tsx  VersionDiffView.tsx  VersionPreview.tsx
src/i18n/: index.ts  locales.test.ts
src/pages/: CallLogs.tsx  Contacts.tsx  Dashboard.tsx  FileManager.tsx  FolderSync.tsx  Messages.tsx  ScreenMirror.tsx  Settings.tsx  Terminal.tsx  Transfer.tsx  VersionHistory.tsx
src/stores/: useStore.test.ts  useStore.ts
src/styles/: global.css
src/utils/: cn.test.ts  format.test.ts  (+2 more)
(+45 files in other folders)
