[package]
name = "droidlink"
version = "2.0.0"
description = "Android Phone Manager - USB ADB based sync & management tool"
authors = ["DroidLink"]
license = "MIT"
repository = "https://github.com/ai2master/DroidLink"
edition = "2021"

[lib]
name = "droidlink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "droidlink"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "7"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
dirs = "6"
regex = "1"
encoding_rs = "0.8"
which = "7"
md5 = "0.7"
tauri-plugin-drag = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
